--- a/magisterska.tex
+++ b/magisterska.tex
@@ -15,7 +15,7 @@
 \newtheorem{tw}[df]{Twierdzenie}
 %\newtheorem{dw}{Dowód}
 \newtheorem{algorytm}[df]{Algorytm}
-\newtheorem{przyklad}{Przykład}[chapter]
+\newtheorem{przyklad}{Przykład}[chapter]{\normalfont}
 \newtheorem{metoda}[df]{Metoda}
 \newtheorem{uwaga}[df]{Uwaga}
 \newtheorem{problem}{Problem}[chapter]
@@ -345,14 +345,14 @@ Rzędem macierzy $\mathbb{A}$ nazywamy wspólną wartość rzędu kolumnowego i 
 \end{df}
 
 Niech $\mathcal{V}$ i $\mathcal{W}$ będą przekształceniami liniowymi nad ciałek $\setK$.
-\begin{df}[Jądro macierzy {\citep[Sec 8.1]{alzega}}]
+\begin{df}[Jądro przekształcenia liniowego {\citep[Sec 8.1]{alzega}}]
 Jądrem przekształcenia liniowego $A: \mathcal{V}\to \mathcal{W}$ nazywamy zbór:
 $$
 Ker A = \set{ \mathbf{x} \in \mathcal{V} : A(\mathbf{x}) = 0}.
 $$
 \end{df}
 
-\begin{df}[Obraz macierzy {\citep[Sec 8.1]{alzega}}]
+\begin{df}[Obraz przekształcenia liniowego {\citep[Sec 8.1]{alzega}}]
 Obrazem przekształcenia liniowego $A: \mathcal{V}\to \mathcal{W}$ nazywamy zbór:
 $$
 Im A = \set{ \mathbf{y} \in \mathcal{W} : \exists_{\mathbf{x} \in \mathcal{V}} \: y = A(\mathbf{x})}.
@@ -554,7 +554,7 @@ Wartością osobliwą $\sigma_k$ macierzy $\mathbb{X}$ nazywamy
 $$
 \sigma_k = \sqrt{\lambda_k},
 $$
-gdzie $\lambda_k, \: k \in \setN$ jest wartością własną macierzy $\mathbb{X} \mathbb{X}^T$.
+gdzie $\lambda_k, \: k \in \setN$ jest nieujemną wartością własną macierzy $\mathbb{X} \mathbb{X}^T$.
 \end{df}
 
 \begin{df}[Norma Frobeniusa{\citep{ulafiir}}] %Using Linear Algebra for Intelligent Information Retrival.pdf
@@ -585,7 +585,7 @@ $\sigma_{1}\geq \sigma_{2} \geq ... \geq \sigma_{r} > \sigma_{r+1} = ... = \sigm
 $Im(\mathbb{X})$ i $Ker(\mathbb{X})$ oznaczają zakres i jądro macierzy.
 Wtedy:
 \begin{enumerate}
-\item właściwości rzędu macierzy: $\rz{\mathbb{X}} = r$, $Ker(\mathbb{X}) = \przestrzen{\mathbf{v}_{r+1},...,\mathbf{v}_n}$, 
+\item $\rz{\mathbb{X}} = r$, $Ker(\mathbb{X}) = \przestrzen{\mathbf{v}_{r+1},...,\mathbf{v}_n}$, 
 $Im(\mathbb{X}) = \przestrzen{\mathbf{u}_1,\mathbf{u}_2,...,\mathbf{u}_r}$,
 \item $\mathbb{X} = \sum_{i=1}^r \mathbf{u}_i \cdot\sigma_i \cdot \mathbf{v}_i^T,$
 \item $||\mathbb{X}||_F^2 = \sigma_{1}^2+...+\sigma_{r}^2$.
@@ -679,7 +679,7 @@ $$
 $$
 gdzie $\mathbf{u}_i$ i $\mathbf{v}_i$ oznaczają odpowiednio $i$-te kolumny macierzy $\mathbb{U}$ i $\mathbb{V}$.
 
-Zauważmy, że z własności 2. twierdzenia 3.13 mamy
+Zauważmy, że z własności 2. twierdzenia 3.11 mamy
 $$
 ||\mathbb{X} - \mathbb{X}_k||_F^2 = ||\sum_{i=k+1}^n \mathbf{u}_i \cdot \sigma_i \cdot \mathbf{v}_i^T||_F^2.
 $$
@@ -695,7 +695,7 @@ $$
 Niech $\mathbb{X}^{`} = \mathbb{X}-\mathbb{B}_k, \mathbb{X}^{``} = \mathbb{B}_k$.
 Wtedy $\mathbb{X} = \mathbb{X}^{`} + \mathbb{X}^{``}$. 
 
-Korzystając z Twierdzenia Weylsa mamy
+Korzystając z Twierdzenia Weylsa otrzymujemy
 $$
 \sigma_{i+j-1}(\mathbb{X})\leq \sigma_{i}(\mathbb{X}^{`}) + \sigma_j(\mathbb{X}^{``}).
 $$ 
@@ -998,7 +998,7 @@ Podzbiór skończony $\set{0,1, \ldots, n}, \: n\in \setN$ nazywamy zbiorem ocen
 \end{df} 
 
 \begin{df}[Macierz preferencji {\citep[Sec 1.3]{kidzinski}}]
-Rozważmy zbiór przedmiotów o liczności $n$ oraz grupę użytkowników o liczności $m$. Macierzą preferencji nazywamy macierz $\mathbb{O} \in \mathbb{M}_{n \times m}(\setOceny)$ o wartościach w ustalonym zbiorze ocen $\setOceny$.
+Rozważmy zbiór przedmiotów o liczności $n$ oraz grupę użytkowników o liczności $m$. Macierzą preferencji nazywamy macierz $\mathbb{O} \in \mathbb{M}_{n \times m}(\setOceny)$.
 \end{df}
 
 Macierz preferencji $\mathbb{O}$ możemy utożsamiać z tabelą, która jako nazwy kolumn przyjmuje poszczególnych użytkowników, natomiast jako nazwy wierszy przyjmuje przedmioty. Wypełnienie tabeli stanowią oceny, które użytkownicy wystawili przedmiotom. Ideę pojęcia macierzy preferencji przedstawia poniższa tabela:
@@ -1063,8 +1063,9 @@ Załóżmy, że dla funkcji $R$ znane są wartości dla pewnych par przedmiotów
 \end{problem}
 
 Problem tworzenia rekomendacji możemy utożsamić z wypełnieniem macierzy preferencji $\mathbb{O}$ co zostało dokładniej opisane w sekcji 4.4.
+\bigskip
 
-Przyjrzyjmy się następującemu przykładowi, który ilustruje istotę problemu.
+Przyjrzyjmy się następującemu przykładowi, który ilustruje istotę problemu 4.1.
 
 \begin{przyklad}
 Niech zbiór przedmiotów będzie w tym przypadku zbiorem sześciu książek, $\setPrzedmioty = \set{p_1, p_2, p_3, p_4, p_5, p_6}$, gdzie $p_i$ dla $i \in \set{1,2,3,4,5,6}$ oznacza $i$ - tą książkę. Zbiór użytkowników niech będzie zbiorem czytelników, $\setUzytkownicy = \{u_1, u_2, u_3, u_4, u_5, u_6\}$, gdzie $u_i$ dla $i \in \set{1,2,3,4,5,6}$ oznacza $i$ - tego czytelnika.
@@ -1126,9 +1127,9 @@ W metodzie tej celem jest stworzenie rekomendacji i wygenerowania listy przedmio
 \begin{enumerate}
 \item stworzenie wektora własności $\mathbf{w} = [w_1, \ldots, w_n]$, $n \in \setN$, gdzie $\forall_{i \in \set{1, \ldots, n}} \: w_i \in \setWlasnosci$,
 
-\item wygenerowanie profilów produktów - przedstawienie wektorów wartości $\mathbf{w}_{p_i}$ gdzie poszczególne elementy wektora określają wartości funkcji anotującej poszczególnych własności $w_1, \ldots, w_n$ dla przedmiotu $p_i$ dla $i \in \setN$,
+\item wygenerowanie profilów produktów - przedstawienie wektorów wartości $\mathbf{w}_{p_i}$ gdzie elementy wektora określają wartości funkcji anotującej poszczególnych własności $w_1, \ldots, w_n$ dla przedmiotu $p_i$ dla $i \in \setN$,
 
-\item wygenerowanie profilów użytkowników - stworzenie wektorów własności $\mathbf{w}_{u_j}$ przypisanych użytkownikom, gdzie poszczególne elementy wektora określają preferencji użytkownika $u_j$ dla $j \in \setN$ w stosunku do elementów wektora własności $\mathbf{w}$ określonego w kroku 1.,
+\item wygenerowanie profilów użytkowników - stworzenie wektorów własności $\mathbf{w}_{u_j}$ przypisanych użytkownikom, gdzie poszczególne elementy wektora określają preferencje użytkownika $u_j$ dla $j \in \setN$ w stosunku do elementów wektora własności $\mathbf{w}$ określonego w kroku 1.,
 
 \item obliczmy ocenę $\widehat{o}_{j,i}$ jaką użytkownik $j$ wystawiłby dla przedmiotu $i$, którego wcześniej nie oceniał, za pomocą funkcji
 $$
@@ -1181,7 +1182,7 @@ Preferencje czytelników zostaną więc opisane za pomocą wektorów:
 $$
 \mathbf{w}_{u_1}, \: \mathbf{w}_{u_2}, \: \mathbf{w}_{u_3}, \: \mathbf{w}_{u_4}, \: \mathbf{w}_{u_5}, \: \mathbf{w}_{u_6}.
 $$
-Obliczmy ocenę jaką książce $p_3$ wystawiłby użytkownik $u_1$ przy założeniu, że wektor preferencji użytkownika $u_1$ jest postaci $\mathbf{w}_{u_1}= [5,1.1,2.1]^T$. Użytkownik ten preferuje więc książki gatunku $w_1$, gdy książki gatunków $w_0$ i $w_2$ są dla niego nieatrakcyjne.
+Obliczmy ocenę jaką książce $p_3$ wystawiłby użytkownik $u_1$ przy założeniu, że wektor preferencji użytkownika $u_1$ jest postaci $\mathbf{w}_{u_1}= [5,1.1,2.1]^T$. Użytkownik ten preferuje więc książki gatunku $w_0$, gdy książki gatunków $w_1$ i $w_2$ są dla niego mniej atrakcyjne.
 Zatem:
 $$
 \widehat{o}_{1,3} = \mathbf{w}_{u_1}^T \mathbf{w}_{p_3} = [5,1.1,2.1] \cdot [1, 0.88, 0.02] ^ T = 5 \cdot 1 + 1.1 \cdot 0.88 + 2.1 \cdot 0.02 = 6.01.
@@ -1213,7 +1214,7 @@ Licznością $f_{k,j}$ nazywamy liczbę wystąpień własności $w_k$ w przedmio
 \end{df}
 
 \begin{df}[TF {\citep[Sec 3.3.1.1]{rsh}}]
-$TF$ (ang. \textit{term frequency}) nazywamy funkcję przedstawiającą zależność własności $w_k$ od przedmiotu $p_j$:
+$TF$ (ang. \textit{term frequency}) nazywamy macierz przedstawiającą zależność własności $w_k$ od przedmiotu $p_j$:
 $$
 TF(w_k, p_j)=\frac{f_{k,j}}{\max_{z}f_{z,j}},
 $$
@@ -1256,7 +1257,7 @@ Każdy z dokumentów $p_i, \: i\in\set{1,\ldots,n} $ przedstawiamy jako wektor w
 \begin{przyklad} [{\citep[Sec 3]{bre}}]
 Algorytm TFIDF może zostać również zastosowany w odniesieniu do rozważanego przykładu 4.2.
 
-W tym przypadku macierz TF będzie zawierać informacje o występowaniu poszczególnych gatunków $w_1,w_2$ w książkach.
+W tym przypadku macierz TF będzie zawierać informacje o występowaniu poszczególnych gatunków $w_0, w_1,w_2$ w książkach.
 Wartość wyrazu macierzy $1$ będzie oznaczać, że książka reprezentuje cechy gatunku, natomiast $0$, że takich cech nie posiada.
 
 W przypadku macierzy IDF liczba dokumentów $N$ to liczba wszystkich książek w zbiorze $\setPrzedmioty$, natomiast $n_k$ to liczba książek, które reprezentują cechy gatunku $w_k$.
@@ -1492,7 +1493,7 @@ Postępując w analogiczny sposób przewidzimy wszystkie brakujące oceny :
 Możemy więc wnioskować, że w tym przypadku dla użytkownika $u_3$ książka $p_1$ prawdopodobnie nie będzie zbyt atrakcyjna. Użytkownik $u_6$, natomiast, z chęcią przeczyta książkę $p_5$. 
 \end{przyklad}
 
-\subsection{Filtrowanie kolaboratywne oparte na  elementach}
+\subsection{Filtrowanie kolaboratywne oparte na  przedmiotach}
 W przypadku filtrowania kolaboratywnego opartego na elementach wartości podobieństwa między użytkownikami zostaje zastąpiona przez wartości podobieństwa między elementami.
 
 \begin{algorytm}
