Poprawki oraz dodanie sekcji 4.2.3 i 4.5.

--- a/magisterska.tex
+++ b/magisterska.tex
@@ -371,8 +371,8 @@ $$
 gdzie $\mathcal{V}$ jest przestrzenią liniową nad ciałem liczb rzeczywistych lub ciałem liczb zespolonych $\setK$.
 \end{df}
 
-\begin{df}[Wartość własna macierzy kwadratowej {\citep[Sec 12.2]{alzega}}]
-Liczbę $\lambda \in \setR$ nazywamy wartością własną macierzy kwadratowej $\mathbb{A}$, jeżeli istnieje niezerowy wektor $\mathbf{x}$ taki, że
+\begin{df}[Wartość własna macierzy kwadratowej {\citep[Sec 13.1]{ealIII}}]
+Liczbę $\lambda \in \setK$ nazywamy wartością własną macierzy kwadratowej $\mathbb{A}$, jeżeli istnieje niezerowy wektor $\mathbf{x}$ taki, że
 $$
 \mathbb{A}\mathbf{x}=\lambda\mathbf{x}.
 $$
@@ -555,7 +555,7 @@ $$
 $$
 \end{tw}
 
-\begin{df}[Wartość osobliwa macierzy ]
+\begin{df}[Wartość osobliwa macierzy \citep{woin}]
 Wartością osobliwą $\sigma_k$ macierzy $\mathbb{X}$ nazywamy
 $$
 \sigma_k = \sqrt{\lambda_k},
@@ -1816,7 +1816,7 @@ $$
 
 Podejście to nie uwzględnia jednak wartości podobieństwa występujących między użytkownikami, co jest w~tym przypadku bardzo istotne.
 
-Możemy więc wykorzystać w~tym przypadku średnią ważoną, której zastosowanie pokazaliśmy już w~sekcji 4.2.1.
+Możemy więc wykorzystać średnią ważoną, której zastosowanie zostało pokazane w~sekcji 4.2.1.
 
 W konsekwencji, estymacja nowej oceny odbywa się następująco
 $$
